Fix footnote align

--- a/default-style.css
+++ b/default-style.css
@@ -54,7 +54,7 @@ sub {
 }
 
 .footdef sup {
-    top: 1.3em;
+    top: 1pt;
 }
 
 .footpara p {
